# coursach-philp

./: buffer.txt  myfirstapp.cabal  ФиЛП 1.docx
app/: Main.hs
db/: discipline_db.txt  loading_db.txt  program_db.txt  semester_db.txt  speciality_db.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: myfirstapp-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.4.4/: myfirstapp-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.6.2/: myfirstapp-0.1.0.0-inplace.conf  package.cache
src/Models/: Discipline.hs  Loading.hs  Program.hs  Semester.hs  Speciality.hs
src/Modules/: File.hs  ReadDB.hs  Search.hs
src/TBUI/: Routes.hs  Tools.hs
src/TBUI/Menus/: DisciplineMenu.hs  LoadingMenu.hs  ProgramInnerMenu.hs  ProgramMenu.hs  SemesterMenu.hs  SpecialityMenu.hs  StartMenu.hs
