cabal-version:      2.4
name:               myfirstapp
version:            0.1.0.0
license:            NONE
author:             rOman4ike
maintainer:         rOman4ike@yandex.ru
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Models.Speciality
        Models.Program
        Models.Semester
        Models.Discipline
        Models.Loading
        Modules.File
        Modules.ReadDB
        Modules.Search
        TBUI.Routes
        TBUI.Tools
        TBUI.Menus.StartMenu
        TBUI.Menus.SpecialityMenu
        TBUI.Menus.ProgramMenu
        TBUI.Menus.ProgramInnerMenu
        TBUI.Menus.SemesterMenu
        TBUI.Menus.DisciplineMenu
        TBUI.Menus.LoadingMenu
    build-depends:
        base ^>=4.12.0.0,
        ansi-terminal,
        directory,
    hs-source-dirs:   src
    default-language: Haskell2010

executable myfirstapp
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.12.0.0,
        ansi-terminal,
        directory,
        myfirstapp,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite myfirstapp-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
        base ^>=4.12.0.0,
        ansi-terminal,
        directory,
        myfirstapp,
